mehari/src/annotate/seqvars/snapshots/mehari__annotate__seqvars__csq__test__annotate_snv_brca1_transcript_picking_reporting@17-41197701-G-C-true-false.snap
---
source: src/annotate/seqvars/csq.rs
expression: res
---
- allele:
    Alt:
      alternative: C
  consequences:
    - missense_variant
  putative_impact: moderate
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007294.4
  feature_biotype:
    - coding
  feature_tags:
    - mane_select
    - ref_seq_select
  rank:
    ord: 23
    total: 23
  hgvs_g: g.41197701G>C
  hgvs_n: n.5699C>G
  hgvs_c: c.5586C>G
  hgvs_p: p.His1862Gln
  cdna_pos:
    ord: 5699
    total: 7088
  cds_pos:
    ord: 5586
    total: 5592
  protein_pos:
    ord: 1862
    total: 1864
  distance: 0
  strand: -1
  messages: ~
